--- a/index.html
+++ b/index.html
@@ -7,63 +7,59 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: url('background.jpg') no-repeat center center fixed;
+      background: url('7083dd77-baa1-4ec2-9f11-10de96465caf.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
-      font-family: 'Arial', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
+      font-family: 'Arial', sans-serif;
       overflow: hidden;
-      position: relative;
     }
-
-    h1 {
-      position: absolute;
-      top: 30%;
-      width: 100%;
-      text-align: center;
-      font-size: 3rem;
-      animation: fadeIn 2s ease-in-out;
-    }
-
     .heart {
       position: absolute;
       font-size: 2rem;
       color: red;
       animation: floatUp 5s linear infinite;
     }
-
-    .signature {
-      position: absolute;
-      bottom: 10px;
-      right: 20px;
-      font-size: 1rem;
-      color: white;
-      font-style: italic;
+    @keyframes floatUp {
+      0% {
+        opacity: 0;
+        transform: translateY(0);
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(-100vh);
+      }
     }
-
+    h1 {
+      font-size: 3rem;
+      text-align: center;
+      animation: fadeIn 2s ease-in-out;
+      z-index: 10;
+    }
     @keyframes fadeIn {
       0% { opacity: 0; transform: scale(0.8); }
       100% { opacity: 1; transform: scale(1); }
     }
-
-    @keyframes floatUp {
-      0% { opacity: 0; transform: translateY(0); }
-      50% { opacity: 1; }
-      100% { opacity: 0; transform: translateY(-100vh); }
-    }
-
-    iframe {
-      display: none;
+    audio {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      z-index: 100;
     }
   </style>
 </head>
 <body>
   <h1>I ❤️ You Madiha</h1>
-  <div class="signature">your love, Mustajab</div>
-
-  <!-- Background Music -->
-  <iframe width="0" height="0" src="https://www.youtube.com/embed/aJYmxB1iiIU?autoplay=1&loop=1&playlist=aJYmxB1iiIU" frameborder="0" allow="autoplay"></iframe>
+  <audio controls autoplay loop>
+    <source src="https://p.scdn.co/mp3-preview/10b98fc51b2cc6b0832605d08a5a9eb13e7d3a2f?cid=774b29d4f13844c495f206cafdad9c86" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
   <script>
     function createHeart() {
@@ -72,8 +68,12 @@
       heart.style.left = Math.random() * 100 + 'vw';
       heart.innerText = '❤️';
       document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 5000);
+
+      setTimeout(() => {
+        heart.remove();
+      }, 5000);
     }
+
     setInterval(createHeart, 300);
   </script>
 </body>
