--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      background: url('madiha.jpg') no-repeat center center fixed;
+      background: url('madiha.jpg') no-repeat top center fixed;
       background-size: cover;
       color: white;
       display: flex;
